core.css
/* ... */
/* Tablet */
@media only screen and (min-width: 1051px) and (max-width: 1366px) and (orientation: landscape){ /* between 1051px and 1366px */
    :root{
        --space-smallest: 0.85rem;
        --space-small: 1.35rem;
        --space-large: 1.85rem;
        --space-largest: 2.35rem;

        --nl-position: 82%;
    }
}

/* Phone */
@media only screen and (max-width: 1050px){ /* 1050px or smaller */
    :root{
        --space-smallest: 0.75rem;
        --space-small: 1.25rem;
        --space-large: 1.75rem;
        --space-largest: 2.25rem;

        --nl-position: 90%;
    }
}



/* Body ------------------------ */

body{
    position: relative;
    background-color: var(--clr-lightest);
    color: var(--clr-darkest);
    font-family: "peridot-pe-variable", sans-serif;
}



/* Button ------------------------ */

.button{
    border: solid 2px var(--clr-darkest);
    border-radius: var(--space-smallest);
    padding-inline: calc(var(--space-small));
    padding-block: calc(var(--space-small) / 2);
    color: var(--clr-lightest) !important;
    background-color: var(--clr-darkest);
    font-family: "acumin-variable", sans-serif;
    font-variation-settings: "wght" 600, "wdth" 100, "ital" 0;
    font-size: var(--txt-h6);
}



/* Site borders ------------------------ */

.site_frame{
    position: fixed;
    top: 0;
    pointer-events: none;

    width: 5vw;
    height: 100vh;
    width: 5dvw;
    height: 100dvh;

    background-repeat: repeat-y;
    background-size: 100% 100vh;
    animation: site_frame_flow infinite 10000ms linear;
    z-index: 1;
}
.frame_left{
    left: 0;
    background-image: url("/img/flourish/border_L.png");
}
.frame_right{
    right: 0;
    background-image: url("/img/flourish/border_R.png");
    background-position-x: right;
}

@keyframes site_frame_flow{
    to{
        background-position-y: 100vh;
        background-position-y: 100dvh;
    }
}

/* Tablet & Phone */
@media only screen and (max-width: 1050px){ /* 1050px or smaller */
    .frame_right{
        display: none;
    }

    .frame_left{
        top: 0;
        left: 0%;
        pointer-events: none;

        width: 0vw;
        height: 100vh;
        width: 0lvw;
        height: 100lvh;

        transition: left 300ms ease;
        z-index: 95;
    }

    .frame_left.hamburger_pullout{
        left: 50% !important;

        width: 5vw;
        width: 5dvw;
    }
}



/* Header & Nav  ------------------------ */

#header_flex{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: var(--space-large);
    padding: var(--space-small) 0;
    margin-bottom: var(--space-largest);
}

.header_icon{
    width: 100px;
    user-select: none;
}

.header_nav_grid{
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    gap: var(--space-small);
}
.header_nav_grid li:not(:first-child), .header_portfolio_fold li{
    position: relative;
}
.header_nav_grid li > *, .header_portfolio_fold li > *{
    font-family: "peridot-pe-variable", sans-serif;
    font-variation-settings: "wght" 400, "wdth" 100, "ital" 0;
    font-size: var(--space-small);
}
.header_portfolio_fold li > *{
    font-size: var(--space-smallest) !important;
}

.header_portfolio_fold{
    position: absolute;
    top: 50%;
    left: 0;
    pointer-events: none;
    opacity: 0;
    transition: all 300ms ease;
}
.header_nav_hover_list:hover .header_portfolio_fold,
.header_nav_hover_list:active .header_portfolio_fold{
    top: 100%;
    pointer-events: auto;
    opacity: 1;
}
.header_nav_hover_list{
    user-select: none;
}
.header_portfolio_fold li{
    padding-block: 0;
    position: relative;
}

#hamburger,
#hamburger + label{
    display: none;
}

#mobile-blackout{
    position: fixed;
    display: none;
}
/* ... */

